# GOatLANG-Go-Compiler-and-Virtual-Machine

./: .clang-format  .gitignore  CMakeLists copy.txt  CMakeLists.txt  Dockerfile  Dockerfile_original  GOatLANG  GOatLANG.g4  README.md  program.txt
examples/: factorial.goat  fibonacci.goat  for-loop.goat  goto-as-break.goat  h2o-daemon.goat  h2o-higher-order-channel.goat  if-stmt.goat  interleaving.goat  lambda.goat  more_send_than_buffer_size.goat  multiple_send_recv.goat  nested_level_variable_capture.goat  non_blocking_chan.goat  pair.goat  recursion.goat  send_recv.goat  short-circuit.goat  variable_capture.goat
src/: BitSet.hpp  BlockingQueue.hpp  CallStack.hpp  ChannelManager.hpp  Code.hpp  Common.hpp  Compiler.hpp  Heap.cpp  Heap.hpp  InstructionStream.cpp  InstructionStream.hpp  Native.cpp  Native.hpp  OperandStack.hpp  Runtime.cpp  Runtime.hpp  StringPool.hpp  Thread.cpp  Thread.hpp  TypeChecker.cpp  VM.cpp  VM.hpp  input  input.cpp  input.hpp  main.cpp
src/unimplemented/: Compiler.txt  Heap.txt
